--- a/index.html
+++ b/index.html
@@ -27,37 +27,13 @@
                 <h3 class="banner-subtitle">Hi, I am</h3>
                 <h2 class="banner-title">Sakibur Rahman</h2>
                 <p class="banner-discription">I am from Bogra.i completed my hsc from Karota Maltimidia school and collage.Now i am study in bsc  in computer science and engineering university of IUBAT. I like coding very much.</p>
-                <button class="org-button">Download CV</button>
+                <a class="org-button" href="/sakibur resume marn stuck.pdf"download="sakibur resume mern stuck.pdf">Download CV</a>
+                
             </div>
-            <img src="/images/sakib.png" alt="">
+            <img src="/images/sakib.png"  alt="">
         </div>
-
     </header>
     <main>
-     <section class="about">
-        <h3 class="sec-title">About me </h3>
-        <p class="sec-discription">I,m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-        <div class="about-info-box">
-            <div class="about-info">
-                <p class="info-title">Name:</p>
-                <p class="info-discription">Sakib</p>
-            </div>
-            <div class="about-info">
-                <p class="info-title">Email:</p>
-                <p class="info-discription">21103090@iubat.edu</p>
-            </div>
-            <div class="about-info">
-                <p class="info-title">Date of bath</p>
-                <p class="info-discription">01-03-2000</p>
-            </div>
-            <div class="about-info">
-                <p class="info-title">From</p>
-                <p class="info-discription">Bangladesh</p>
-            </div>
-
-        </div>
-     </section>
-    </main>
     <footer>
 
     </footer>
